# sinity-lynchpin

./: .envrc  .gitignore  CLAUDE.md  README.md  SECURITY.md  flake.nix  index.html  justfile  pyproject.toml  pyrightconfig.json
.beads/: issues.jsonl  metadata.json
.github/workflows/: test.yml
beads/: issues.jsonl
docs/: README.md  architecture.md  lynchpin-polylogue-boundary.md  lynchpin-source-apis.md  narrative-generation-prompt.md  prog-summarization-idea.md  project_architecture_reconceptualization.md
docs/pipelines/: activitywatch-minute-timeline.md  baseline-rebuild.md  wykop-scrape.md
docs/plans/: artifacts-consolidation-strategy.md  artifacts-redesign.md  calendar-views.md  data-organization.md  focus-dashboards.md  instrumentation-metadata.md  intelligent-materialization-simplification-plan.md  lynchpin-explosion-proposal.md  lynchpin-hpi.md  lynchpin-roadmap.md  machine-causal-attribution-audit.md  machine-causal-attribution-self-prompt.md  machine-causal-attribution-spec.md  machine-context-analysis-phase.md  machine-workload-management.md  pipeline-unification.md  progressive-summaries.md  sinevec-integration.md
docs/reference/: baseline.md  calendar-views.md  chisel.md  data-materialization-audit.md  data-sources.md  ecosystem-context.md  hpi-modules.md  hpi-service-bootstrap.md  ledgers.md  life-range.md  life-timeline.md  lynchpin-idempotency.md  observability-model.md  period-reports.md  productivity-research.md  repo-organization.md  sinevec-integration-2026-01-01.md  sinex-dx-devops-deployment-paradigm-shift.md  velocity.md  warehouse.md  webhistory.md  wykop-export.md
docs/site/: index.html  project.json
infra/activitywatch-grafana/: grafana.ini  start-grafana.sh
lynchpin/: __init__.py  activitywatch.py  atuin.py  cache.py  calendar.py  chatlog.py  config.py  dendron.py  finance.py  gitstats.py  instrumentation.py  materialization.py  meta.py  periods.py  polylogue.py  raindrop.py  reddit.py  sessions.py  sinex.py  sinnix.py  sleep.py  spotify.py  substack.py  warehouse.py  webhistory.py  wykop.py
lynchpin/analysis/: METHODOLOGY.md  __init__.py  __main__.py  ai_session_efficiency.py  analysis_spec.json  anomaly_crossref.py  burnout_warning.py  claim_calibration.py  cli.py  code_history_claims.py  code_quality.py  dag.py  dashboard_server.py  evidence_bundles.py  google_takeout_mining.py  health_modeling.py  keylog.py  keystroke_attribution.py  life_phase.py  lifestyle_correlations.py  lynchpin_self.py  materialize.py  mood_correlations.py  operator_daily.py  operator_public_text.py  operator_retrospective_readiness.py  operator_rhythm.py  personal_interest_fusion.py  polylogue_metrics.py  productivity_predictors.py  sleep_architecture_productivity.py  substance_health.py  substance_kinetics.py  text_sentiment.py  url_crossref.py  weather_correlations.py  web_category_daily.py  workflow_mechanics.py
lynchpin/cli/: coverage_audit.py  current_state.py  github_frontier.py  google_takeout_inventory.py  health_gdpr_processors.py  health_io.py  health_signal_processors.py  health_sleep_processor.py  machine_benchmarks.py  materialization_audit.py  materialize.py  narrative.py  process_activitywatch_archives.py  process_health.py  substrate_snapshot.py
lynchpin/composite/: __init__.py  causal_chains.py  context_pack.py  current_state.py  day_brief.py  delivery.py  evidence.py  evidence_graph.py  health_bridge.py  intraday.py  issue_closure_chain.py  movement.py  period_synthesis.py  readiness.py  semantic_enrichment.py  sleep_infer.py  source_readiness.py  statistics.py  substrate_confidence.py  terminal_patterns.py  timeline.py  work_correlation.py  work_event_kind.py
lynchpin/context/: __init__.py  bundles.py  calendar.py  claims.py  contrast.py  current_state.py  day_rollups.py  delta.py  history.py  life_timeline.py  memory.py  narrative.py  packet_builders.py  packet_types.py  packets.py  patterns.py  period_rollups.py  period_summaries.py  project_arcs.py  reports.py  selection.py  signal_coverage.py  signal_rollups.py  state.py  state_packets.py  summary_models.py  themes.py  trust.py  window.py
lynchpin/core/: __init__.py  analytics.py  cache.py  calls.py  classify.py  claude_sdk.py  codex_exec.py  config.py  coverage.py  dates.py  embeddings.py  errors.py  evidence.py  evidence_graph.py  freshness.py  io.py  machine_pressure.py  parse.py  periods.py  pr_review.py  primitives.py  project_mentions.py  projects.py  serialization.py  source.py  source_contracts.py  substrate_sources.py  title_features.py  vendor.py  work_event_kind.py
lynchpin/duck/: __init__.py  (+5 more)
scripts/: asciinema_index.py  build_baseline.py  build_focus_portal.py  build_knowledge_graph.py  build_life_timeline.py  build_manual_snapshot.py  collect_asciinema_metadata.py  generate_daily_focus.py  generate_project_bundles.py  generate_weekly_focus_report.py  run-full-retrospective.sh  scrape_wykop.py  summarise_session.py
tests/: conftest.py  test_analysis_active_work_packages.py  test_analysis_comparison.py  test_analysis_dependency_map.py  test_analysis_evidence_bundles.py  test_analysis_github_frontier.py  test_analysis_knowledge_cli.py  test_analysis_project_velocity_windows.py  test_analysis_projects_cli.py  test_analysis_symbol_index.py  test_analysis_textshape.py  test_analytics.py  test_atuin_utils.py  test_calendar_views_utils.py  test_causal_chains.py  test_caveat_propagation.py  test_chatlog_utils.py  test_classify.py  test_closure_slos.py  test_config_paths.py  test_context.py  test_context_bundles.py  test_context_life_summary.py  test_context_life_timeline.py  test_context_patterns.py  test_context_reports.py  test_context_utils.py  test_conversation_forks.py  test_core_calls.py  test_core_utils.py  test_current_state_script.py  test_current_state_timeline.py  test_duck_substrate.py  test_enrichment_utils.py  test_exports_daily.py  test_focus_utils.py  test_generate_scaffold_contract.py  test_gitstats_utils.py  test_goodreads_utils.py  test_health_and_misc_utils.py  (+78 more)
tool/: current-state  devshell-motd  github-frontier  narrative  refresh  retro-scaffold
(+1000 files in other folders)
